<resources>
    <string name="app_name">SDAFINALASS</string>
    <string name="title">gtitle</string>
    <string name="description">gdescription</string>
    <string name="developer">Developer</string>
    <string name="Game_description">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_my_app">Welcome to my app</string>
    <string name="welcome_to_my_app1">Welcome to my app</string>
    <string name="login">Login</string>
    <string name="email_hint">Enter email</string>
    <string name="password_hint">Enter Password</string>
    <string name="Create_Account">Create Account</string>
    <string name="or">OR</string>
    <string name="please_enter_a_username">PLease Enter a Username</string>
    <string name="please_enter_your_email_address">Please Enter Your Email Address</string>
    <string name="please_enter_a_password">Please Enter a Password</string>
    <string name="placeholder">PlaceHolder</string>
    <string name="please_enter_your_gaming_achievement">Please Enter Your Gaming achievement</string>
    <string name="name">Name</string>
    <string name="how_long_ago">How Long Ago</string>
    <string name="title_of_gaming_achievement">Title of Gaming Achievement</string>
    <string name="enter_a_description_of_your_achievement">Enter A Description Of Your Achievement</string>
    <string name="save_your_achievement">Save Your Achievement</string>
    <string name="placeholder1">PlaceHolder</string>
    <string name="no_achievements_saved_please_add_one_with_the_button_above">no_achievements_please_use_plus_button_above</string>
    <string name="created_date">Date Created</string>
    <string name="add_achievements">Add Achievements</string>
    <string name="signout">Signout</string>
    <string name="achievement_title">Achievement Title</string>
    <string name="description_of_achievement">Description Of Achievement</string>
    <string name="name_username">Name</string>
    <string name="a_share_button_for_achievement">a_share_button for achievement</string>
    <string name="nothing_added_please_login">Nothing Added, Please Login....</string>
    <string name="developer23">Developer:</string>
    <string name="welcome_to_my_app11">Welcome To My Final App</string>
    <string name="Welcoma">asdasd</string>
    <string name="welcome_to_my_final_app">Welcome To My Final App</string>
    <string name="please_enjoy">Please Enjoy !!!!</string>
</resources>