<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="7dp"
    app:cardCornerRadius="10dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <ImageButton
            android:src="@android:drawable/btn_star"
            android:padding="12dp"
            android:layout_width="wrap_content"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"
            android:id="@+id/current_row_favourite_button"
            android:contentDescription="@string/a_share_button_for_achievement" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/games_image_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:scaleType="fitXY"
            android:src="@drawable/phfpro"/>

        <TextView
            android:id="@+id/games_title_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="@font/bungee"
            android:padding="12dp"
            android:text="@string/title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/games_Description_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aleo_bold"
            android:padding="12dp"
            android:paddingStart="12dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:text="@string/Game_description"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/games_time_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developer"
            android:padding="6dp"
            android:hint="@string/developer23"
            android:textStyle="italic" />

    </LinearLayout>

</androidx.cardview.widget.CardView>



