<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".CreateAccountActivity"
    android:background="@drawable/gradient_pf">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_account_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/account_login_form"
        android:layout_height="wrap_content">

        <EditText
            android:hint="@string/please_enter_a_username"
            android:id="@+id/username_account_info"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="18dp"
            android:autofillHints="username" />

        <AutoCompleteTextView
            android:id="@+id/email_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_your_email_address"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginTop="16dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_account"
            android:layout_marginTop="16dp"
            android:hint="@string/please_enter_a_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:autofillHints="Password Hint" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/create_account_button"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            android:text="@string/Create_Account"

            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>