<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="18dp"
        android:orientation="vertical"
        android:gravity="center">

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/aldrich"
        android:text="@string/welcome_to_my_final_app"
        android:textSize="30sp" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:elevation="0dp">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@color/End_Purple"
                android:elevation="0dp"
                app:cardBackgroundColor="@color/MiddleYelloe"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp"
                app:cardUseCompatPadding="true">


                <TextView
                    android:id="@+id/Intro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/bungee"
                    android:text="@string/please_enjoy"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Login"
            android:text="@string/login"
            android:background="@android:color/transparent"
            android:textColor="@color/purple_700" />


    </LinearLayout>